Fix bug 1710384: Prevent batch editor layout breakage (#1947)
* Fix bug 1710384: Prevent batch editor layout breakage by preventing a class name clash.

Also
* More specific CSS selectors
* Move user-controls selector to the component CSS file
* Remove duplicate selector from WaveLoader.css

--- a/frontend/src/core/user/components/UserControls.css
+++ b/frontend/src/core/user/components/UserControls.css
@@ -1,5 +1,3 @@
-.translate-next-notice {
-    color: #7bc876;
-    float: left;
-    margin: 14px 10px;
+.user-controls {
+    float: right;
 }
